<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
      <variable
          name="furniture"
          type="com.craft.furniture.data.model.db.FurnitureListEntity" />
    </data>




<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false"
    app:cardBackgroundColor="?attr/backColorDark"
    app:shapeAppearance="@style/CornerShape">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_color_light">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:id="@+id/furniture_iv"
            loadUrl="@{furniture.image}"
            errorImage="@drawable/blurred_background"
            android:scaleType="centerCrop"
            android:background="@drawable/blurred_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_tv"
            style="@style/TitleTextViewStyle"
            android:text="@{furniture.product_name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/furniture_iv"
            tools:text="Wooden Dinner Set" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vendor_tv"
            android:text="@{furniture.vendor_name}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/SimpleTextViewStyle"
            tools:text="by-Vendor Name"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/feature_tv"
            app:layout_constraintTop_toBottomOf="@+id/vendor_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TitleTextViewStyle"
            android:text="@string/feature_title_text"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/color_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/feature_tv"
            app:layout_constraintEnd_toStartOf="@+id/color_name_tv"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/SimpleTextViewStyle"
            android:text="@string/color"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/color_name_tv"
            android:layout_width="0dp"
            android:text="@{furniture.color_name}"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/feature_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/color_tv"
            style="@style/SimpleTextViewStyle"
            tools:text="Blue"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/weight_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/color_tv"
            app:layout_constraintEnd_toStartOf="@+id/weight_value_tv"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/SimpleTextViewStyle"
            android:text="@string/weight"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/weight_value_tv"
            android:layout_width="0dp"
            android:text="@{furniture.weight}"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/color_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weight_tv"
            style="@style/SimpleTextViewStyle"
            tools:text="20kg"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dimension_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/weight_tv"
            app:layout_constraintEnd_toStartOf="@+id/dimension_value_tv"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/SimpleTextViewStyle"
            android:text="@string/dimension"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dimension_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{furniture.product_dimention}"
            app:layout_constraintTop_toBottomOf="@+id/weight_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dimension_tv"
            style="@style/SimpleTextViewStyle"
            tools:text="20 * 40"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ship_weight_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dimension_tv"
            app:layout_constraintEnd_toStartOf="@+id/ship_weight_value_tv"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/SimpleTextViewStyle"
            android:text="@string/ship_weight"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ship_weight_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{furniture.shipping_weight}"
            app:layout_constraintTop_toBottomOf="@+id/dimension_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ship_weight_tv"
            style="@style/SimpleTextViewStyle"
            tools:text="50kg"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ship_weight_value_tv"
            app:layout_constraintEnd_toStartOf="@+id/material_name_tv"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/SimpleTextViewStyle"
            android:text="@string/material"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{furniture.material_name}"
            app:layout_constraintTop_toBottomOf="@+id/ship_weight_value_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/material_tv"
            style="@style/SimpleTextViewStyle"
            tools:text="Wooden"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description_tv"
            app:layout_constraintTop_toBottomOf="@+id/material_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TitleTextViewStyle"
            android:text="@string/product_description_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{furniture.description}"
            app:layout_constraintTop_toBottomOf="@+id/description_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/SimpleTextViewStyle"
            tools:text="Description"/>

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:padding="@dimen/padding_small"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              android:background="@drawable/layout_back">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:text="@{`Rs:`+furniture.price}"
                android:textColor="?attr/textColorLight"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:paddingTop="@dimen/padding_medium"
                android:paddingHorizontal="@dimen/padding_medium"
                app:layout_constraintBottom_toTopOf="@+id/stock_tv"
                app:layout_constraintEnd_toStartOf="@+id/discount_price_tv"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/SimpleTextViewStyle"
                tools:text="Rs 5000"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/discount_price_tv"
                android:text="@{`Rs:`+furniture.desc_price}"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:paddingTop="@dimen/padding_medium"
                android:textColor="?attr/textColorLight"
                app:layout_constraintBottom_toTopOf="@+id/stock_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/price_tv"
                style="@style/SimpleTextViewStyle"
                tools:text="Rs 3000"/>


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:id="@+id/stock_tv"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColorLight"
            android:paddingVertical="@dimen/padding_medium"
            android:paddingHorizontal="@dimen/padding_medium"
            android:text="@string/in_stock_msg"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/SimpleTextViewStyle"/>
          </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
</layout>